# libshumate

./: .editorconfig  .gitignore  .gitlab-ci.yml  AUTHORS  CONTRIBUTING.md  NEWS  README  README.md  libshumate.doap  meson.build  meson_options.txt  shumate-uninstalled.pc.in  shumate.pc.in
champlain/: meson.build
data/: compass.css  libshumate.gresource.xml  license.css  meson.build  point.css  scale.css  shumate-inspector-page.ui  shumate-simple-map.ui
demos/: animated-marker.c  create-destroy-test.c  launcher-gtk.c  launcher-vala.vala  launcher.c  launcher.js  map-style.json  markers-vala.vala  markers.c  markers.h  meson.build  minimal.c  org.gnome.Shumate.Demo.Devel.gresources.xml  org.gnome.Shumate.Demo.Devel.json  org.gnome.Shumate.Demo.gresources.xml  org.gnome.Shumate.Demo.json  polygons.c  polygons.py  shumate-demo-window.c  shumate-demo-window.h  shumate-demo-window.ui  shumate-demo.c  shumate-test-tile-source.c  shumate-test-tile-source.h  sprites.json  url-marker.c
demos/osm-liberty/: style.json
docs/: inspector.md  libshumate.toml.in  maplibre-compatibility.md  meson.build  urlmap.js
docs/reference/: libchamplain-sections.txt  libchamplain.types  libshumate-docs.sgml  libshumate-sections.txt  libshumate.types  meson.build
po/: LINGUAS  POTFILES  POTFILES.in  ab.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  he.po  hi.po  hr.po  hu.po  ia.po  id.po  ie.po  is.po  it.po  ja.po  ka.po  kab.po  kk.po  ko.po  kw.po  lt.po  lv.po  meson.build  ml.po  nb.po  (+19 more)
shumate/: meson.build  shumate-0.0.vapi  shumate-adjustment.c  shumate-adjustment.h  shumate-bounding-box.c  shumate-bounding-box.h  shumate-cairo-exportable.c  shumate-cairo-exportable.h  shumate-cairo-importable.c  shumate-cairo-importable.h  shumate-compass.c  shumate-compass.h  shumate-coordinate.c  shumate-coordinate.h  shumate-custom-marker.c  shumate-custom-marker.h  shumate-data-source-request.c  shumate-data-source-request.h  shumate-data-source.c  shumate-data-source.h  shumate-debug.c  shumate-debug.h  shumate-defines.h  shumate-enum-types.c.in  shumate-enum-types.h.in  shumate-error-tile-renderer.c  shumate-error-tile-renderer.h  shumate-error-tile-source.c  shumate-error-tile-source.h  shumate-exportable.c  shumate-exportable.h  shumate-file-cache.c  shumate-file-cache.h  shumate-file-tile-source.c  shumate-file-tile-source.h  shumate-image-renderer.c  shumate-image-renderer.h  shumate-inspector-page-private.h  shumate-inspector-page.c  shumate-inspector-settings-private.h  (+99 more)
shumate/vector/: meson.build  shumate-vector-background-layer-private.h  shumate-vector-background-layer.c  shumate-vector-collision-private.h  shumate-vector-collision.c  shumate-vector-expression-filter-private.h  shumate-vector-expression-filter.c  shumate-vector-expression-format-private.h  shumate-vector-expression-format.c  shumate-vector-expression-interpolate-private.h  shumate-vector-expression-interpolate.c  shumate-vector-expression-literal-private.h  shumate-vector-expression-literal.c  shumate-vector-expression-private.h  shumate-vector-expression-type-private.h  shumate-vector-expression-type.gperf  shumate-vector-expression.c  shumate-vector-fill-layer-private.h  shumate-vector-fill-layer.c  shumate-vector-index-private.h  shumate-vector-index.c  shumate-vector-layer-private.h  shumate-vector-layer.c  shumate-vector-line-layer-private.h  shumate-vector-line-layer.c  shumate-vector-render-scope-private.h  shumate-vector-render-scope.c  shumate-vector-sprite-sheet-private.h  shumate-vector-sprite-sheet.c  shumate-vector-symbol-container-private.h  shumate-vector-symbol-container.c  shumate-vector-symbol-info-private.h  shumate-vector-symbol-info.c  shumate-vector-symbol-layer-private.h  shumate-vector-symbol-layer.c  shumate-vector-symbol-private.h  shumate-vector-symbol.c  shumate-vector-utils-private.h  shumate-vector-utils.c  shumate-vector-value-private.h  (+3 more)
subprojects/: memphis.wrap
tests/: coordinate.c  data-source-request.c  file-cache.c  license.c  location.c  map.c  marker-layer.c  marker.c  memory-cache.c  meson.build  network-tile-source.c  test-tile-server.c  test-tile-server.h  vector-collision.c  vector-expression.c  vector-index.c  vector-reader.c  vector-renderer.c  vector-sprite-sheet.c  vector-style.c  vector-value.c  view.c  viewport.c
tests/data/: 0.pbf  meson.build  sprites.json  sprites@2x.json  style.json  tests.gresource.xml
