option('gir',
       type: 'boolean', value: true,
       description: 'Generate gir data (requires gobject-introspection)')
option('vapi',
       type: 'boolean', value: true,
       description: 'Generate vapi data (requires vapigen)')

option('gtk_doc',
       type: 'boolean', value: true,
       description: 'Build reference manual (requires gi-docgen installed and gir enabled)')

option('demos',
       type: 'boolean', value: false,
       description: 'Build demonstration programs')

option('vector_renderer',
       type: 'boolean', value: true,
       description: 'Build the vector tile renderer')

option('sysprof',
       type: 'feature', value: 'auto',
       description : 'enable sysprof-capture support for profiling')
